Removed padding from top of .file field to avoid space alignment issue with checkbox

--- a/components/01 - elements/forms/_forms.scss
+++ b/components/01 - elements/forms/_forms.scss
@@ -506,7 +506,7 @@
     $upload-primary: #353535;
 
     .file {
-      padding-top: 1.1rem;
+      padding-top: 0rem;
       padding-left: 7rem;
       margin-bottom: .625rem;
     }
